# LIMIX_modified

./: .gitignore  LICENSE.md  NOTICE.md  README.md  environment.yml  environment_macos.yml  install_and_run_notes.md  pyproject.toml
THIRD_PARTY_LICENSES/: GLIMIX_MIT_LICENSE.txt  LIMIX_APACHE_LICENSE.txt
limix_modified/_bits/: array.py  deco.py  numpy.py  xarray.py
limix_modified/_cli/: download.py  estimate_kinship.py  extract.py  pipeline.py  preprocess.py  qtl.py  remove.py
limix_modified/_data/: _asarray.py  _conf.py  _conform.py  _lik.py
limix_modified/_display/: _aligned.py  _core.py  _session.py
limix_modified/glimix_core_mod/cov/: _kron2sum.py  _lrfree.py
limix_modified/glimix_core_mod/lmm/: _kron2sum.py
limix_modified/her/: _estimate.py
limix_modified/io/: _fetch.py  bgen.py  bimbam.py  csv.py  hdf5.py  npy.py  plink.py  txt.py
limix_modified/optimix_mod/: optimix.py
limix_modified/plot/: _kinship.py  _ld_plot.py  _manhattan.py  _pairwise_correlation.py  _qqplot.py
limix_modified/qc/: _boxcox.py  _impute.py  _ld.py  _mean_std.py  _quant_gauss.py  _unique.py
limix_modified/qtl/: _iscan.py  _scan.py
limix_modified/qtl/result/: _draw.py  _ifactory.py  _iresult.py  _mt_result.py  _mt_simple.py  _st_result.py  _st_simple.py
limix_modified/run_numpylimix/: _gaussianize_geno.py  _genotype_preparation.py  _numpy_dataloader.py  _standardize.py  simulator.py  train_limix_numpy.py
limix_modified/run_numpylimix/configs/: config.json  hyperparameters.yaml  hyperparameters_limix_numpy.yaml  hyperparameters_limix_numpy_defaultC0.yaml
limix_modified/run_numpylimix/genotype_data/: citation.md
limix_modified/sh/: _extract.py  _url.py
limix_modified/stats/: _allele.py  _confusion.py  _kinship.py  _pvalue.py  test_allele.py
limix_modified/vardec/: _vardec.py
notebooks/: limix_GxE.ipynb  notebook_plot_gwas_results.ipynb
