[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limix_modified"
version = "1.0.0"
description = "Modified LIMIX version for analysis for multivariate GWAS, variance decomposition and prediction."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Bibiana M. Horn"},
    {name = "Christoph Lippert"},
]
keywords = ["genetics", "multivariate gwas", "gene-by-environment interaction", "variance decomposition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Runtime dependencies (only packages actively imported in the codebase)
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "glimix-core==3.1.14",
    "limix-plot>=0.1.2",
    "pandas-plink>=2.2.9",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.60.0",
    "click>=8.0.0",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "humanfriendly>=10.0",
    "texttable>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
]

jupyter = [
    "ipykernel>=6.29.0",
    "ipython>=8.12.0",
]

[project.urls]
Homepage = "https://github.com/name/LIMIX_modified"
"Bug Reports" = "https://github.com/name/LIMIX_modified/issues"
"Source" = "https://github.com/name/LIMIX_modified"
Documentation = "https://github.com/name/LIMIX_modified#readme"

[project.scripts]
limix_modified = "limix_modified.run_numpylimix.train_limix_numpy:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["limix_modified*"]

[tool.setuptools.package-data]
limix_modified = [
    "configs/*.yaml",
    "configs/*.yml",
    "run_numpylimix/configs/*.yaml",
    "run_numpylimix/configs/*.yml",
    "*.txt",
    "*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]